--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-HUBS_SERVER="dev.reticulum.io"
+HUBS_SERVER="localhost:8080"
 RETICULUM_SERVER="dev.reticulum.io"
 FARSPARK_SERVER="farspark-dev.reticulum.io"
 NON_CORS_PROXY_DOMAINS="hubs.local,localhost"
