--- a/.env.defaults
+++ b/.env.defaults
@@ -14,8 +14,6 @@ HUBS_SERVER="dev.reticulum.io"
 RETICULUM_SERVER="dev.reticulum.io"
 THUMBNAIL_SERVER="nearspark-dev.reticulum.io"
 NON_CORS_PROXY_DOMAINS="hubs.local,localhost"
-CORS_PROXY_SERVER="cors-proxy-dev.reticulum.io"
-GITHUB_ORG="mozilla"
+CORS_PROXY_SERVER="hubs-proxy.com"
 GITHUB_REPO="spoke"
-GITHUB_PUBLIC_TOKEN="de8cbfb4cc0281c7b731c891df431016c29b0ace"
 IS_MOZ="false"
