--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,8 @@
-HUBS_SERVER="fh-erfurt.info"
-RETICULUM_SERVER="fh-erfurt.info"
-FARSPARK_SERVER="hubs-nearspark.fh-erfurt.info"
-CORS_PROXY="cors-proxy-dev.reticulum.io"
-NON_CORS_PROXY_DOMAINS="hubs.local,localhost,fh-erfurt.info,hubs-assets.fh-erfurt.info,hubs-cors-proxy.fh-erfurt.info"
+HUBS_SERVER="hubs.mozilla.com"
+RETICULUM_SERVER="hubs.mozilla.com"
+FARSPARK_SERVER="farspark.reticulum.io"
+CORS_PROXY="hubs-proxy.com"
+NON_CORS_PROXY_DOMAINS="hubs.mozilla.com,reticulum.io"
 ROUTER_BASE_PATH="/spoke"
-GITHUB_ORG="mozilla"
 GITHUB_REPO="spoke"
-GITHUB_PUBLIC_TOKEN="de8cbfb4cc0281c7b731c891df431016c29b0ace"
 IS_MOZ="false"
