--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "start-moz": "cross-env IS_MOZ=true NODE_ENV=development webpack-dev-server --mode development",
     "run-local-reticulum": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 ROUTER_BASE_PATH=/spoke BASE_ASSETS_PATH=https://hubs.local:9090/ HUBS_SERVER=hubs.local:4000 RETICULUM_SERVER=hubs.local:4000 yarn start",
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "deploy": "node -r esm -r @babel/register ./scripts/deploy.js",
-    "login": "node -r esm -r @babel/register ./scripts/login.js",
     "bundle-analyzer": "cross-env NODE_ENV=production webpack-dev-server --mode=production --env.BUNDLE_ANALYZER",
     "precommit": "lint-staged",
     "lint": "yarn lint:js && yarn lint:css",
@@ -102,12 +100,11 @@
     "react-window": "^1.8.5",
     "recast-wasm": "^0.1.1",
     "recharts": "^1.8.5",
-    "rimraf": "^3.0.2",
     "styled-components": "4.4.0",
     "styled-icons": "^8.4.2",
-    "tar": "^6.1.0",
     "three": "https://github.com/MozillaReality/three.js.git#0f9b0024725f0dd917caa54c2934a4ba1fc12c4f",
     "three-mesh-bvh": "^0.1.4",
+    "troika-three-text": "^0.44.0",
     "url-toolkit": "^2.1.6",
     "use-debounce": "^3.4.0",
     "use-http": "^0.2.4",
@@ -152,9 +149,6 @@
     "husky": "^3.0.5",
     "jsdom": "^15.1.1",
     "lint-staged": "^9.2.5",
-    "locate-chrome": "^0.1.1",
-    "node-fetch": "^2.6.0",
-    "phoenix-channels": "^1.0.0",
     "prettier": "^1.16.4",
     "puppeteer": "^5.2.1",
     "selfsigned": "^1.10.6",
